2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/annotations/docs/Makefile.am:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	  Detect namespace prefix if not given.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* style-classic.css:
	* style.css:
	  Fix gap, caused by double index divs produces by index generated with
	  the docbook stylesheets.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtk-doc.xsl:
	  Make sure indexdiv and glossarydiv elements have anchors.

	* style-classic.css:
	* style.css:
	  Fix spacing for navbar in index/glossary pages.

	* tests/annotations/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Cleanup samples.

2009-01-19  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtk-doc.xsl:
	  Experiment with navigation for index and glossaries.

	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	  Fix index entries and copy doc along with the method.

	* style.css:
	  also do the extra spacing for the index/glossary environments now.

	* tests/gobject/docs/tester-docs.xml:
	  Experiment with a more complete doc structure.

2009-01-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Make highligher post processing conditional.

2009-01-10  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	  Erm, not having a highlighter is not fatal.

2009-01-10  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* TODO:
	* configure.in:
	* gtkdoc-fixxref.in:
	  Look for source-highlight and highlight. Not perfect yet, highlight uses
	  different classes in the css :/.

	* tests/gobject/docs/tester-docs.xml:
	  More header data in the examples.

2009-01-09  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Treat FOO_GET_INTERFACE as standard. Fixes #567132.

2009-01-09  Stefan Kost  <ensonic@users.sf.net>
