@@ -41,6 +41,7 @@
     top: 3.1em;
     z-index: 0;
   }
+  /* this seems to be a bug in the xsl style sheets when generating indexes */
   div.index div.index
   {
     top: 0em;
@@ -79,7 +80,8 @@
   }
   td.shortcuts
   {
-    color: #cc0000;
+    /* tango:scarlet red 1 */
+    color: #ef2929;
     font-size: 80%;
     white-space: nowrap;
   }
