@@ -1,5 +1,16 @@
 2009-01-20  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-fixxref.in:
+	  Indent.
+
+	* gtkdoc-mkdb.in:
+	  Fix end of string handling.
+
+	* style.css:
+	  Use one tango colors one more time.
+
+2009-01-20  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mkdb.in:
 	* tests/annotations/docs/Makefile.am:
 	* tests/bugs/docs/Makefile.am:
